# events-handler-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .env.example  .flake8  .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pyproject.toml
{{cookiecutter.project_name}}/src/: consumer.py  handler.py  kafka_utils.py  main.py  producer.py  setup.py
{{cookiecutter.project_name}}/src/models/: base_model.py
