[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "This code listens on a topic for messages, enriches and send them to a topic"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic-avro = "^0.3.1"
confluent-kafka = "^1.8.2"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
fastavro = "^1.4.10"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
mypy = "^0.941"
pre-commit = "^2.17.0"

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
